--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mrtd",
+  "name": "in-a-giffy",
   "private": true,
   "scripts": {
     "start": "meteor run"
@@ -15,5 +15,12 @@
     "react-addons-pure-render-mixin": "^15.6.2",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2"
+  },
+  "devDependencies": {
+    "eslint": "^4.18.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.6.1"
   }
 }
